# magc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
scripts/: fib.mag
src/: console.rs  expr.rs  expression.rs  helpers.rs  lexer.rs  lib.rs  main.rs  parser.rs  scanner.rs  token.rs  type_system.rs
src/compiler/: errors.rs  mod.rs  multimethod.rs
src/compiler/compilelets/: call.rs  infix.rs  literal.rs  method.rs  mod.rs  value_pattern.rs  variable_pattern.rs
src/compiler/type_system/: mod.rs
src/parser/: mod.rs  parselets.rs
src/parser/parselets/: block.rs  call.rs  conditional.rs  field.rs  field_pattern.rs  group.rs  infix.rs  list.rs  literal.rs  member.rs  method.rs  mod.rs  pair.rs  pattern.rs  prefix.rs  record.rs  tuple.rs  tuple_pattern.rs  variable_pattern.rs
src/parser/parselets/pattern/: field.rs  mod.rs  pair.rs  tuple.rs  variable.rs
src/types/: expression.rs  mod.rs  pattern.rs  result.rs  token.rs
src/types/expression/: block.rs  conditional.rs  infix.rs  method.rs  mod.rs  prefix.rs
src/types/pattern/: field.rs  field_pattern.rs  mod.rs  pair.rs  pair_pattern.rs  tuple.rs  tuple_pattern.rs  value.rs  value_pattern.rs  variable.rs  variable_pattern.rs
