[package]
name = "magc"
description = "The Mag Language Compiler"
keywords = ["language", "parser", "compiler"]
categories = ["compilers", "development-tools", "parser-implementations"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
strontium = { path = "../strontium" }
unicode-segmentation = "1.9.0"