[package]
name = "magc"
description = "The Mag Language Compiler"
repository = "https://github.com/mag-language/magc"
keywords = ["language", "parser", "compiler"]
categories = ["compilers", "development-tools", "parser-implementations"]
license = "MIT"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
strontium = { path = "../strontium" }
unicode-segmentation = "1.9.0"
